# django-ckeditors

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.rst  commit_history_prior_to_vendoring.txt  pyproject.toml  setup.py  version.toml
.github/ISSUE_TEMPLATE/: chore.md  documentation.md
.github/archive/: testpypi.yml
.github/scripts/: generate_coverate_report.py  update_changelog.py
.github/workflows/: lint_python.yml  mainPR.yaml  release.yaml  release.yml  testpypi.yml
django_ckeditors/: __init__.py  admin.py  apps.py  exceptions.py  fields.py  helpers.py  image.py  models.py  package-lock.json  package.json  urls.py  views.py  webpack.config.js  webpack.config.mjs  widgets.py
django_ckeditors/static/django_ckeditors/: app.js
django_ckeditors/static/django_ckeditors/src/: override-django.css
django_ckeditors/templates/django_ckeditors/: widget.html
docs/source/: conf.py  contributing.rst  index.rst  requirements.txt
docs/source/discussion/: discussion-default-image-conversion.rst  discussion-image-conversion-quality.rst  index-discussion.rst  why-ckeditor.rst
docs/source/how-to/: index-how-to.rst  quickstart.rst
docs/source/reference/: build-system.rst  index-reference.rst
example/: pyproject.toml
example/blog/: conftest.py  manage.py
example/blog/articles/: admin.py  apps.py  forms.py  models.py  storage.py
example/blog/articles/migrations/: 0001_initial.py
example/blog/blog/: __init__.py  asgi.py  settings.py  storage.py  urls.py  wsgi.py
example/blog/fixtures/files/images/: corrupt_image_generator.py
example/blog/static_files/: custom.css
example/blog/tests/: test_cke_apps.py  test_fields.py  test_forms.py  test_helpers.py  test_image.py  test_storage.py  test_upload_file.py
